Convert projects page to grid to fix misalignment in small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1706,6 +1706,8 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-		body.grid-container {
-			display: grid;
-		  }
+.grid-container {
+    display: grid;
+  	grid-template-columns: repeat(2, 1fr);
+  	gap: 10px;
+}
